src/sass/modules/_sections.scss
.section {
  position: relative;

  &.-banner {
    background-repeat: no-repeat;
    // background-attachment: fixed;
    background-position: center center;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
  }

  &.-padding-s {
    padding: 50px 0;
  }

  &.-padding-m {
    padding: 80px 0;
  }

  &.-padding-l {
    padding: 100px 0;
  }

  &.-padding-xl {
    padding: 120px 0;
  }

  &.-padding-xxl {
    padding: 150px 0;
  }

  &.-home {
    background-image: url(/images/home.jpg);
    padding-bottom: 170px;
    padding-left: 50px;
    padding-right: 50px;
    color: #fff;
    z-index: 20;

    + .section.-white {
      height: 120px;
      line-height: 120px;
      z-index: 21;

      @include media($screen-sm) {
        margin-top: 0;
      }
    }

    //nav issue
    @include media($screen-md) {
      height: 100vh !important;
    }

    @include media($screen-sm) {
      padding: 20px 0;
      height: auto !important;

      .container {
        max-width: 100%;
      }
    }

    .button.-prim + span {
      line-height: 48px;
      display: inline-block;
      overflow: hidden;
    }
  }

  &.-promocode {
    background-image: url(/images/promocode.png);
    padding-bottom: 170px;
    padding-left: 50px;
    padding-right: 50px;
    color: #fff;
    z-index: 20;

    + .section.-white {
      height: 120px;
      line-height: 120px;
      margin-top: -120px;
      z-index: 21;

      @include media($screen-sm) {
        margin-top: 0;
      }
    }

    //nav issue
    @include media($screen-md) {
      height: 100vh !important;
    }

    @include media($screen-sm) {
      padding: 20px 0 120px 0;
      height: auto !important;

      .container {
        max-width: 100%;
      }
    }

    .button.-prim + span {
      line-height: 48px;
      display: inline-block;
      overflow: hidden;
    }
  }

  &.-full {
    height: -webkit-calc(100vh - 120px);
    height: calc(100vh - 120px);

    @include media($screen-md) {
      height: auto;    }
  }

  &.-o-hidden {
    //overflow: hidden;
  }

  &.-white {
    background: white;
  }

  &.-green {
    background: $ench-color;
    color: #fff;
    z-index: 20;

    + .section.-white {
      z-index: 21;
    }
  }

  &.-dark {
    background: $ench-dark-color;
    color: #fff;
  }

  &.-steps {
    border-top: 4px solid #c7c7c7;
    background: url('../images/resume-bg-01.jpg');
  }

  &.-pre-footer {
    background-image: url(/images/footer-bg.jpg);
  }

  &.-footer {
    background: #1a1a1a;
    height: 120px;
    line-height: 120px;
    font-size: 16px;
    padding: 0 50px;

    .lets-begin:hover,
    .lets-begin:focus {
      color: #444;
    }

    .container {
      padding: 0;
      max-width: 100%;

      [class*='col-']:first-child {
        padding-left: 0;
      }

      [class*='col-']:last-child {
        padding-right: 0;
      }
    }

    @include media($screen-sm) {
      height: auto;
      text-align: center;
      line-height: 60px;
      padding: 50px 0;
    }

    .logo {
      opacity: .5;
    }
  }

}

.live-editing {
  position: absolute;
  margin-top: 150px;
  max-width: 15%;

  h2 {
    margin-bottom: 35px;
  }

  p {
    font-size: 16px;
  }

  @include media($screen-md) {
    max-width: none;
    width: 30%;
    margin-top: 30px;
  }

  @include media($screen-sm) {
    position: static;
    margin-top: 30px;
    width: 50%;
  }
}

.live-editing-image {
  float: right;
  width: 65%;

  @include media($screen-md) {
    width: 60%;
  }

  @include media($screen-sm) {
    width: 50%;
  }
}

.v-base {
  display: table;
  width: 100%;
  height: 100vh;

  @include media($screen-md) {
    padding-top: 40px;
    padding-bottom: 40px;
  }

  @include media($screen-sm) {
    height: auto !important;
  }

  &.-h50 {
    height: 50vh;
  }
}

.v-middle {
  display: table-cell;
  vertical-align: middle;
}

.v-bottom {
  display: table-cell;
  vertical-align: bottom;
}

.feature {
  margin-bottom: 50px;

  h3 {
    margin-bottom: 25px;
  }

  @include media($screen-sm) {
    margin-bottom: 70px;

    img {
      float: right;
      margin-top: -10px
    }
  }
}

